{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "CombatControls",
            "id": "0646f8d2-0967-4b36-83cc-55086f2b2b94",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "1372b00a-bfa2-415b-a8b5-9bca407faa7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryPosition",
                    "type": "Value",
                    "id": "7fafdda4-a6cb-49cf-9222-c11fa590607c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryContact",
                    "type": "Button",
                    "id": "a6f075c3-67bb-497b-897c-968482c6ff75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryPosition",
                    "type": "Value",
                    "id": "79cff7e0-39c5-4933-828d-ecfcf44257ec",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9bd45932-8d0d-4fa0-87bf-2b5825bcd647",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile Controls",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64fb6df4-611c-42d7-8db4-332fab17b2fb",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile Controls",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bbe55f8-c8a5-4ff3-8305-035caf564ab3",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile Controls",
                    "action": "SecondaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c82b194f-dd3d-4023-bd97-150c8cbb8055",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile Controls",
                    "action": "SecondaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debugging",
            "id": "67729b3c-55cb-4b44-8ba9-43b4c9f3eee5",
            "actions": [
                {
                    "name": "Test",
                    "type": "Button",
                    "id": "367a8f80-e894-45d3-b546-40d37100e192",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse",
                    "type": "Button",
                    "id": "fc55a55f-9bfe-4d89-823e-97a2731ea448",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "a0df3b2b-7045-476c-936b-2fe7a56586a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "45aa1721-b839-45d8-a90d-c5cecb3ed08f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "00e0990b-dc86-49ff-9bcc-0e1647b57353",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "5d77c0cb-0cfe-4f8f-8201-1aef16215461",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5d7777c2-802f-4d55-8231-7d948edc10f0",
                    "path": "<Keyboard>/#(a)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard Mouse Controls",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b11c5eba-3ec9-4320-9993-8d400a4208cf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard Mouse Controls",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab642de1-bd71-4b12-a92c-baf00f1ec55f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard Mouse Controls",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "daaf6f7d-cc10-4f72-943d-204f75a0ac48",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard Mouse Controls",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90760aa9-9035-4e51-9e9c-bd3529e30e1a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard Mouse Controls",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4a3be0d-62a9-403e-801a-ceb2103a6c7b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard Mouse Controls",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bff1c54-d9e5-4ae3-b543-6f5c86f25952",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard Mouse Controls",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b318198e-6792-47dd-8db8-b483993c6bfe",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard Mouse Controls",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e712f21-9584-4096-b54f-769736220f6d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard Mouse Controls",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c69000e8-eeab-4ff9-b91d-a48403e3fe41",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard Mouse Controls",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile Controls",
            "bindingGroup": "Mobile Controls",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard Mouse Controls",
            "bindingGroup": "Keyboard Mouse Controls",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}